matriz lancamento e estudo completo